# cs2-pickems

./: .env.example  .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: __init__.py  cli.py  config.py  cosmetics.py  feasibility.py  main.py  models.py  optimizer.py  playoffs.py  ratings.py  report.py  scoring.py  service.py  simulate.py  swiss.py
backend/app/data/: cache.py  cologne2026.py  hltv.py  liquipedia.py  loader.py  odds.py  valve_standings.py
backend/tests/: test_api.py  test_data.py  test_feasibility_realistic.py  test_full_pickem.py  test_optimizer.py  test_playoffs.py  test_ratings.py  test_simulate.py  test_swiss.py
docs/: pickem_mockup.html
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: Bar.tsx  LiveBracket.tsx  Playoffs.tsx  ProbTable.tsx  Recommendation.tsx  TeamStrengthEditor.tsx  Warnings.tsx
